Add log4j dependency